--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,35 @@
 version: '3.9'
+
 services:
   metabase:
-    image: metabase/metabase:v0.48.4
+    image: metabase/metabase:v0.47.11
+    restart: always
     volumes:
       - ./metabase-data:/metabase-data
     ports:
       - "3000:3000"
     environment:
-      - MB_DB_TYPE=postgres
-      - MB_DB_DBNAME=postgres
-      - MB_DB_PORT=5432
+      ## Portgres Config
+      # - MB_DB_TYPE=postgres
+      # - MB_DB_DBNAME=postgres
+      # - MB_DB_PORT=5432
+      # - MB_DB_USER=admin
+      # - MB_DB_PASS=1234
+      # - MB_DB_HOST=localhost
+      ## Mongo Config
+      - MB_DB_TYPE=mongo
+      - MB_DB_DBNAME=admin
+      - MB_DB_PORT=27017
       - MB_DB_USER=admin
       - MB_DB_PASS=1234
-      - MB_DB_HOST=postgres
-      - MB_MONGODB_HOST=mongo
+      - MB_DB_HOST=localhost
     depends_on:
-      - mongo
-      - postgres
-    links:
       - mongo
       - postgres
 
   postgres:
     image: postgres:14
+    restart: always
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     ports:
@@ -34,6 +41,7 @@ services:
 
   mongo:
     image: mongo:4.4
+    restart: always
     ports:
       - 27017:27017
     volumes:
