--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3.9'
 
 services:
   metabase:
-    image: metabase/metabase:v0.47.11
+    image: metabase/metabase:v0.48.4
     restart: always
     volumes:
       - ./metabase-data:/metabase-data
+      - ./driver/ojdbc11.jar:/plugins/jdbc-drivers/oracle-jdbc-driver.jar
     ports:
-      - "3000:3000"
+      - 3000:3000
     environment:
+      - MB_DB_FILE=/metabase-data/metabase.db
       ## Portgres Config
       # - MB_DB_TYPE=postgres
       # - MB_DB_DBNAME=postgres
@@ -16,16 +18,18 @@ services:
       # - MB_DB_USER=admin
       # - MB_DB_PASS=1234
       # - MB_DB_HOST=localhost
-      ## Mongo Config
-      - MB_DB_TYPE=mongo
-      - MB_DB_DBNAME=admin
-      - MB_DB_PORT=27017
-      - MB_DB_USER=admin
-      - MB_DB_PASS=1234
-      - MB_DB_HOST=localhost
+      # ## Mongo Config
+      # - MB_DB_TYPE=mongo
+      # - MB_DB_DBNAME=admin
+      # - MB_DB_PORT=27017
+      # - MB_DB_USER=admin
+      # - MB_DB_PASS=1234
+      # - MB_DB_HOST=localhost
     depends_on:
       - mongo
       - postgres
+    networks:
+      - postgres-network
 
   postgres:
     image: postgres:14
@@ -38,6 +42,8 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_DB=postgres
       - POSTGRES_PASSWORD=1234
+    networks:
+      - postgres-network
 
   mongo:
     image: mongo:4.4
@@ -52,3 +58,9 @@ services:
       - MONGO_INITDB_DATABASE=mongo
       - MONGO_INITDB_USERNAME=admin
       - MONGO_INITDB_PASSWORD=1234
+    networks:
+      - postgres-network
+
+networks:
+  postgres-network:
+    driver: bridge
