--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,25 +11,26 @@ services:
       - 3000:3000
     environment:
       - MB_DB_FILE=/metabase-data/metabase.db
-      ## Portgres Config
+      ## Portgres Config for metabase
       # - MB_DB_TYPE=postgres
       # - MB_DB_DBNAME=postgres
       # - MB_DB_PORT=5432
       # - MB_DB_USER=admin
       # - MB_DB_PASS=1234
-      # - MB_DB_HOST=localhost
-      # ## Mongo Config
+      # - MB_DB_HOST=host.docker.internal
+      ## Mongo Config for metabase
       # - MB_DB_TYPE=mongo
       # - MB_DB_DBNAME=admin
       # - MB_DB_PORT=27017
-      # - MB_DB_USER=admin
-      # - MB_DB_PASS=1234
-      # - MB_DB_HOST=localhost
+      # - MB_DB_USER=root
+      # - MB_DB_PASS=123456
+      # - MB_DB_HOST=host.docker.internal
     depends_on:
       - mongo
       - postgres
     networks:
       - postgres-network
+      - mongo-network
 
   postgres:
     image: postgres:14
@@ -59,8 +60,10 @@ services:
       - MONGO_INITDB_USERNAME=admin
       - MONGO_INITDB_PASSWORD=1234
     networks:
-      - postgres-network
+      - mongo-network
 
 networks:
   postgres-network:
+    driver: bridge
+  mongo-network:
     driver: bridge
