--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ node_modules/
 mongodb-data/
 postgres-data/
 metabase-data/metabase.db/metabase.db.trace.db/
+plugins/sample-database.db.trace.db
 
 package-lock.json
